@@ -14,5 +14,6 @@ void run_experiments(char* exp_params, char* def_params, char* indir, char* outd
 double_arr* parse_double_range(string_arr* split_param_string);
 int_arr* parse_int_range(string_arr* split_param_string);
 double_arr* parse_param(paramlist* params, char* param_to_parse);
+void stutter_stream(char* indir, char* exp_paramfile, char* def_paramfile, int nfuncs, int nstreams);
 
 #endif
